[DEV] ✨ WIP UT1 of `CustomColType` (issue of non compiling)
